media/css/admin.css
/* ... */
#pweb_fields .pweb-custom-field-container .pweb-custom-field-show-options {
    float: left;
    line-height: 46px;
    width: 15px;
    margin-right: -15px;
    text-decoration: none;
}


#pweb_fields_options_close {
    float: left;
    margin: 1em 1em 1em 0;
}
#pweb_fields .pweb-fields-cols .pweb-custom-field-options,
#pweb_fields .pweb-custom-fields-type .pweb-custom-field-container {
    display: none;
}
#pweb_fields .pweb-custom-fields-type {
    float: left;
    padding: 10px;
    margin: 10px;
    color: #000;
    border: 1px solid rgba(0,0,0, 0.2);
    -webkit-border-radius: 3px;
    border-radius: 3px;
    -webkit-box-shadow: 1px 1px 3px rgba(0,0,0, 0.4);
    box-shadow: 1px 1px 3px rgba(0,0,0, 0.4);
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    cursor: move;
}
#pweb_fields .pweb-custom-fields-type:hover {
    border-color: rgba(0,0,0, 0.6);
}
#pweb_fields .pweb-fields-types .pweb-custom-fields-single.pweb-custom-fields-disabled {
    opacity: 0.3;
    filter: alpha(opacity=30);
    cursor: not-allowed;
}
#pweb_fields .pweb-fields-types .pweb-custom-fields-separator {
    float: left;
    padding: 20px 0;
    width: 100%;
}

.pweb-custom-field-type-email,
.pweb-custom-field-type-name,
.pweb-custom-field-type-phone,
.pweb-custom-field-type-subject,
.pweb-custom-field-type-text,
.pweb-custom-field-type-textarea,
.pweb-custom-field-type-date,
.pweb-custom-field-type-password {
    background-color: #2EA2CC;
}
.pweb-custom-field-type-radio,
.pweb-custom-field-type-checkboxes,
.pweb-custom-field-type-select,
.pweb-custom-field-type-multiple {
    background-color: #1FAD45;
}
.pweb-custom-field-type-custom_text,
.pweb-custom-field-type-header {
    background-color: #CCAF0B;
}
.pweb-custom-field-type-checkbox,
.pweb-custom-field-type-checkbox_modal,
.pweb-custom-field-type-email_copy {
    background-color: #D46F15;
}
.pweb-custom-field-type-upload,
.pweb-custom-field-type-captcha,
.pweb-custom-field-type-newsletter,
.pweb-custom-field-type-mailto_list {
    background-color: #8066A8;
}
.pweb-custom-field-type-button_send {
    background-color: #CF4944;
}

#pweb_fields .pweb-has-field.pweb-custom-field-active {
    color: #fff;
    border-color: rgba(0,0,0, 0.6);
    -webkit-box-shadow: 1px 1px 3px rgba(0,0,0, 0.6), inset 0 0 10px rgba(0,0,0, 0.4);
    box-shadow: 1px 1px 3px rgba(0,0,0, 0.6), inset 0 0 10px rgba(0,0,0, 0.4);
}
#pweb_fields .pweb-has-field.pweb-dragged {
    -webkit-box-shadow: 1px 1px 5px rgba(0,0,0, 0.6);
    box-shadow: 1px 1px 5px rgba(0,0,0, 0.6);
}

#pweb_fields .pweb-droppable,
#pweb_fields .pweb-droppable.pweb-has-field {
    background-color: #f4f4c1;
    background-color: rgba(255,255,0, 0.2);
}
#pweb_fields .pweb-fields-add-row.pweb-droppable,
#pweb_fields .pweb-fields-add-col.pweb-droppable {
    color: #555;
}
#pweb_fields .pweb-droppable-hover,
#pweb_fields .pweb-droppable-hover.pweb-has-field {
    background-color: #fcfc30;
    background-color: rgba(255,255,0, 0.8);
    border-style: solid;
    border-color: #97971d;
    border-color: rgba(0,0,0, 0.4);
}
#pweb_fields .pweb-fields-add-row.pweb-droppable-hover,
#pweb_fields .pweb-fields-add-col.pweb-droppable-hover {
    color: #fff;
}


.pweb-input-mini {
    max-width: 50px;
}
.pweb-input-large {
    max-width: 300px;
    width: 100%;
}
.pweb-input-xlarge {
    max-width: 500px;
    width: 100%;
}


.pweb-not-related {
    opacity: 0.5;
    filter: alpha(opacity=0.5);
}
.pweb-not-related:hover {
    opacity: 1;
    filter: alpha(opacity=1);
}


.pweb-glyphicon-list,
.pweb-glyphicon-list option {
    line-height: 25px;
    font-size: 18px;
    font-family: 'Glyphicons Halflings';
}

span.pweb-pro,
span.pweb-free {
    display: inline-block;
    font-weight: bold;
    font-size: 10px;
    line-height: 18px;
    padding: 0 5px;
    text-transform: uppercase;
}
span.pweb-pro {
    background: #AA0000;
    color: #FFFFFF;
    cursor: pointer;
}
span.pweb-free {
    background: #009E0A;
    color: #FFFFFF;
    cursor: default;
}

.pweb-panels span.pweb-pro {
    position: absolute;
    right: 5px;
    top: 5px;
}


.ui-dialog-content p {
    margin: 10px;
}


pre, code {
    background-color: #f7f7f9;
    border: 1px solid #e1e1e8;
    border-radius: 3px;
    color: #000;
}
code, pre var {
	color: #d14;
}


.pweb-version {
    float: right;
    padding: 9px 0 4px;
    margin-bottom: 15px;
}
.pweb-copyrights {
    font-style: italic;
    font-size: 13px;
    line-height: 20px;
    color: #777777;
}

.c-admin-footer {
  margin-top: 20px;
  text-align: center;
  color: #777;
}

.c-admin-footer .c-rating .dashicons-star-filled {
  line-height: 18px;
  font-size: 12px;
  width: 12px;
  height: 12px;
  color: #FFB300;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c-admin-footer a {
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c-admin-footer .c-rating a:hover {
  color: #27ae60;
}

.c-admin-footer .c-links {
  font-weight: bold;
  font-size: 13px;
}

.c-admin-footer .c-links a:hover {
  color: #27ae60;
}

.c-admin-footer .c-links a + a {
  margin-left: 15px;
}

.c-admin-footer .c-rating a:hover .dashicons-star-filled {
  color: rgb(241, 169, 0);
}

.pweb-clear {
    clear: both;
}
.pweb-clearfix:before,
.pweb-clearfix:after {
	content: "";
	display: table;
	border-collapse: collapse;
}
.pweb-clearfix:after {
	clear: both;
}
.pweb-clearfix {
	min-height: 0; /* support: IE7 */
}

.glyphicon-refresh {
    display: inline-block;
    -webkit-animation: pweb-spin 2s infinite linear;
    animation: pweb-spin 2s infinite linear;
}
@-webkit-keyframes pweb-spin {
    0% { -webkit-transform: rotate(0deg) }
    100% { -webkit-transform: rotate(359deg) }
}
@keyframes pweb-spin {
    0% { transform: rotate(0deg) }
    100% { transform: rotate(359deg) }
}

#pweb_theme_warning {
    margin-bottom: 20px;
}
/* ... */

